@@ -594,7 +594,8 @@ void commandLineHelp()
 		  "\t-help              summarize LyX usage\n"
 		  "\t-userdir dir       try to set user directory to dir\n"
 		  "\t-sysdir dir        try to set system directory to dir\n"
-		  "\t-geometry WxH+X+Y  set the width of the main window\n"
+		  "\t-display display   use display as DISPLAY\n"
+		  "\t-geometry WxH+X+Y  set geometry of the main window\n"
                   "\t-dbg feature[,feature]...\n"
                   "                  select the features to debug.\n"
                   "                  Type `lyx -dbg' to see the list of features\n"
